--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@prisma/client": "^6.4.0",
     "bcryptjs": "^3.0.2",
+    "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
